# fmf_metadata

./: .pre-commit-config.yaml  Dockerfile.tests  Makefile  README.md  setup.cfg
fedora/: python-fmf_metadata.spec
fmf_metadata/: base.py  cli.py  constants.py  pytest_collector.py  pytest_fixture.py
tests/: check-example.py  cockpit_metadata_config.yaml  metadata_config.yaml  test-basic  test.py  test_pytest.py
tests/pytest/: conftest.py
tests/pytest/unit/: main.fmf  test_pytest.py
